# SchoolWork_ML

./: README.md
color_extractor/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
